--- a/170516/Views/Administrator/AddProductCategory.cshtml
+++ b/170516/Views/Administrator/AddProductCategory.cshtml
@@ -7,29 +7,31 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="content-box-large">
+        <div class="main-content-wrapper">
             <div class="panel-heading">
                 @*nav bar*@
                 <ol class="breadcrumb">
-                    <li><a href="@Url.Action("ViewProductCategory","Administrator")">Quản Lý Danh mục</a></li>
-                    <li class="active">Tạo Danh Mục</li>
+                    <li><a href="@Url.Action("ViewProductCategory","Administrator")">Quản lý danh mục</a></li>
+                    <li class="active">Tạo danh mục</li>
                 </ol>
-                <div class="panel-title title-3">Tạo Danh mục mới</div>
+                <div class="container-fluid admin-header">
+                    <div class="title col-md-6 col-xs-6"><h3>Tạo Danh Mục Sản Phẩm Mới</h3></div>
+                </div>
             </div>
-            <div class="panel-body">
-                @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "addProductCategoryForm"}))
+            <div class="container-fluid">
+                @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "addProductCategoryForm" }))
                 {
                     @Html.AntiForgeryToken()
                     <div class="form-horizontal">
-                        <div class="row">      
-                            @Html.ValidationSummary(true)                      
-                            <div class="col-md-8 col-lg-8">
+                        <div class="row">
+                            @Html.ValidationSummary(true)
+                            <div class="col-md-offset-2 col-md-8 col-lg-8">
                                 <!-- PRODUCT CATEGORY NAME -->
-                                <div class="form-group">                                    
+                                <div class="form-group">
                                     <label class="col-sm-3 control-label" for="ProductName">Tên Danh mục <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
-                                        @Html.TextBoxFor(model => model.Name, new {@class= "form-control" }) <span class="input-error-box text-danger"></span>
-                                        @Html.ValidationMessageFor(model => model.Name, null, new { @class= "input-error-box text-danger"})                                                                                
+                                        @Html.TextBoxFor(model => model.Name, new { @class = "form-control" }) <span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.Name, null, new { @class = "input-error-box text-danger" })
                                     </div>
                                 </div>
                                 <!-- PRODUCT CATEGORY DESCRIPTION -->
@@ -37,12 +39,12 @@
                                     <label class="col-sm-3 control-label" for="ProductName">Mô tả <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
                                         @Html.TextBoxFor(model => model.Description, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
-                                        @Html.ValidationMessageFor(model => model.Description, null, new { @class = "input-error-box text-danger" })                                                                                  
+                                        @Html.ValidationMessageFor(model => model.Description, null, new { @class = "input-error-box text-danger" })
                                     </div>
                                 </div>
                                 <!-- PRODUCT CATEGORY PARENT -->
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label" for="ParentID">Danh Mục cha</label>
+                                    <label class="col-sm-3 control-label" for="ParentID">Danh Mục Cha <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
                                         <select id="ParentID" class="form-control" name="ParentID">
                                             <option value=""></option>
@@ -52,17 +54,14 @@
                                             }
                                         </select>
                                         <span class="field-validation-valid" data-valmsg-for="ParentID" data-valmsg-replace="true"></span>
+                                    </div>
                                 </div>
-                                </div>                                                                                                                            
-                            </div>
-
-                            <div class="col-md-4 col-lg-4">
                                 <div class="form-group">
-                                    <label class="control-label">Ảnh Danh mục</label>
+                                    <label class="col-sm-3 control-label">Ảnh <span class="text-danger">*</span></label>
                                     <!-- IMAGE -->
-                                    <div class="image-box">
+                                    <div class="image-box col-sm-7">
                                         <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
-                                        <div id="ImagePreviewBox" class="preview-box" style="max-width:80%;"></div>
+                                        <div id="ImagePreviewBox" class="preview-box" style="max-width:50%;"></div>
                                         <input id="ImageUpload" type="file" class="image-file-input" name="ImageUpload" />
                                         <input id="ProductImage" type="hidden" name="CategoryImage" />
                                         <h5 id="ImageName" class="image-name"></h5>
