--- a/170516/Views/Administrator/AddSupplier.cshtml
+++ b/170516/Views/Administrator/AddSupplier.cshtml
@@ -1,22 +1,24 @@
 ﻿@model _170516.Models.Administrator.CreateSupplierModel
 
 @{
-    ViewBag.Title = "AddSupplier";
+    ViewBag.Title = "Tạo nhà cung cấp";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="row">
 <div class="col-md-12">
-    <div class="content-box-large">
-        <div class="panel-heading">
+    <div class="main-content-wrapper">
+        <div class="container-fluid">
             @*nav bar*@
             <ol class="breadcrumb">
-                <li><a href="@Url.Action("ViewSupplier","Administrator")">Quản Lý nhà cung cấp</a></li>
+                <li><a href="@Url.Action("ViewSupplier","Administrator")">Quản lý nhà cung cấp</a></li>
                 <li class="active">Tạo nhà cung cấp</li>
             </ol>
-            <div class="panel-title title-3">Tạo nhà cung cấp mới</div>
+            <div class="container-fluid admin-header">
+                <div class="title col-md-6 col-xs-6"><h3>Tạo nhà cung cấp mới</h3></div>
+            </div>
         </div>
-        <div class="panel-body">
+        <div class="container-fluid">
             @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "addSupplierForm" }))
             {
                 @Html.AntiForgeryToken()
@@ -25,14 +27,14 @@
                         @Html.ValidationSummary(true)
                         <div class="col-md-8 col-lg-8">                            
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="CompanyName">Tên nhà cung cấp <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="CompanyName">Tên công ty <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.CompanyName, new { @class = "form-control" }) <span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.CompanyName, null, new { @class = "input-error-box text-danger" })
                                 </div>
                             </div>                            
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="ContactFName">Họ <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="ContactFName">Họ người liên hệ <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.ContactFName, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.ContactFName, null, new { @class = "input-error-box text-danger" })
@@ -40,7 +42,7 @@
                             </div>
                             
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="ContactLName">Tên <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="ContactLName">Tên người liên hệ <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.ContactLName, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.ContactLName, null, new { @class = "input-error-box text-danger" })
@@ -48,7 +50,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Address1">Địa chỉ 1: <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Address1">Địa chỉ 1 <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.Address1, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.Address1, null, new { @class = "input-error-box text-danger" })
@@ -56,7 +58,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Address2">Địa chỉ 2:</label>
+                                <label class="col-sm-3 control-label" for="Address2">Địa chỉ 2</label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.Address2, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.Address2, null, new { @class = "input-error-box text-danger" })
@@ -64,42 +66,42 @@
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="City">Tỉnh/Thành phố: <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="City">Tỉnh/Thành phố <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.City, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.City, null, new { @class = "input-error-box text-danger" })
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Phone">Số điện thoại: <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Phone">Số điện thoại <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.Phone, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.Phone, null, new { @class = "input-error-box text-danger" })
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Fax">Fax: </label>
+                                <label class="col-sm-3 control-label" for="Fax">Fax </label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.Fax, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.Fax, null, new { @class = "input-error-box text-danger" })
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="EmailAddress">Email address: <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="EmailAddress">Địa chỉ email <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.EmailAddress, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.EmailAddress, null, new { @class = "input-error-box text-danger" })
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Discount">Discount: <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Discount">Giảm giá <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.Discount, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.Discount, null, new { @class = "input-error-box text-danger" })
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="ProductType">Product Type: <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="ProductType">Loại sản phẩm <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.ProductType, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.ProductType, null, new { @class = "input-error-box text-danger" })
@@ -109,7 +111,7 @@
 
                         <div class="col-md-4 col-lg-4">
                             <div class="form-group">
-                                <label class="control-label">Logo</label>
+                                <label class="control-label">Logo của nhà cung cấp</label>
                                 <!-- IMAGE -->
                                 <div class="image-box">
                                     <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
