--- a/170516/Views/Administrator/UpdateProduct.cshtml
+++ b/170516/Views/Administrator/UpdateProduct.cshtml
@@ -4,16 +4,15 @@
 }
 <div class="row">
     <div class="col-md-12">
-        <div class="content-box-large">
+        <div class="main-content-wrapper">
             <div class="panel-heading">
                 @*nav bar*@
                 <ol class="breadcrumb">
-                    <li><a href="@Url.Action("ViewProduct","Administrator")">Quản Lý Sản Phẩm</a></li>
-                    <li class="active">Cập Nhật Sản Phẩm</li>
+                    <li><a href="@Url.Action("ViewProduct","Administrator")">Quản lý sản phẩm</a></li>
+                    <li class="active">Cập nhật sản phẩm</li>
                 </ol>
-                <div class="panel-title title-3">Cập Nhật Sản Phẩm - @Model.ProductName</div>
             </div>
-            <div class="panel-body">
+            <div class="container-fluid">
                 <form id="UpdateProductForm">
                     <div class="form-horizontal">
                         <fieldset class="fieldset">
