--- a/170516/Views/Administrator/UpdateShipper.cshtml
+++ b/170516/Views/Administrator/UpdateShipper.cshtml
@@ -2,22 +2,27 @@
 @model _170516.Models.Administrator.CreateShipperModel
 
 @{
-    ViewBag.Title = "UpdateShipper";
+    ViewBag.Title = "Cập nhật đơn vị vận chuyển";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="row">
     <div class="col-md-12">
-        <div class="content-box-large">
+        <div class="main-content-wrapper">
             <div class="panel-heading">
                 @*nav bar*@
                 <ol class="breadcrumb">
-                    <li><a href="@Url.Action("ViewShipper","Administrator")">Quản Lý Shipper</a></li>
-                    <li class="active">Chỉnh sửa Shipper</li>
+                    <li><a href="@Url.Action("ViewShipper","Administrator")">Quản lý đơn vị vận chuyển</a></li>
+                    <li class="active">Cập nhật đơn vị vận chuyển</li>
                 </ol>
-                <div class="panel-title title-3">Chỉnh sửa shipper</div>
+                <div class="container-fluid admin-header">
+                    <div class="title col-md-6 col-xs-6"><h3>Cập nhật đơn vị vận chuyển</h3></div>
+                    <div class="col-md-6 col-xs-6">
+                        <a id="addBtn" href="@Url.Action("AddProduct", "Administrator")" class="btn btn-primary btn-sm add-button"><i class="glyphicon glyphicon-plus"></i> Tạo Sản phẩm</a>
+                    </div>
+                </div>
             </div>
-            <div class="panel-body">
+            <div class="container-fluid">
                 @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "updateShipperForm" }))
                 {
                     @Html.AntiForgeryToken()
@@ -26,7 +31,7 @@
                             <div class="col-md-12 col-lg-12">
                                 @Html.HiddenFor(model => model.ShipperID)
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label" for="CompanyName">Tên Shipper <span class="text-danger">*</span></label>
+                                    <label class="col-sm-3 control-label" for="CompanyName">Tên công ty <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
                                         @Html.TextBoxFor(model => model.CompanyName, new { @class = "form-control" }) <span class="input-error-box text-danger"></span>
                                         @Html.ValidationMessageFor(model => model.CompanyName, null, new { @class = "input-error-box text-danger" })
@@ -34,7 +39,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label" for="Address1">Phone <span class="text-danger">*</span></label>
+                                    <label class="col-sm-3 control-label" for="Address1">Điện thoại <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
                                         @Html.TextBoxFor(model => model.Phone, new { @class = "form-control" }) <span class="input-error-box text-danger"></span>
                                         @Html.ValidationMessageFor(model => model.Phone, null, new { @class = "input-error-box text-danger" })
@@ -42,7 +47,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label" for="Address2">Email Address <span class="text-danger">*</span></label>
+                                    <label class="col-sm-3 control-label" for="Address2">Địa chỉ email <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
                                         @Html.TextBoxFor(model => model.EmailAddress, new { @class = "form-control" }) <span class="input-error-box text-danger"></span>
                                         @Html.ValidationMessageFor(model => model.EmailAddress, null, new { @class = "input-error-box text-danger" })
