--- a/170516/Views/Administrator/UpdateUser.cshtml
+++ b/170516/Views/Administrator/UpdateUser.cshtml
@@ -1,21 +1,23 @@
 ﻿@model _170516.Models.Administrator.UpdateUserModel
 
 @{
-    ViewBag.Title = "UpdateUser";
+    ViewBag.Title = "Cập nhật thông tin nhân viên";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 <div class="row">
     <div class="col-md-12">
-        <div class="content-box-large">
+        <div class="main-content-wrapper">
             <div class="panel-heading">
                 @*nav bar*@
                 <ol class="breadcrumb">
-                    <li><a href="@Url.Action("ViewUser","Administrator")">Quản Lý Người dùng</a></li>
-                    <li class="active">Chỉnh sửa Người dùng</li>
+                    <li><a href="@Url.Action("ViewUser","Administrator")">Quản lý nhân viên</a></li>
+                    <li class="active">Cập nhật thông tin nhân viên</li>
                 </ol>
-                <div class="panel-title title-3">Chỉnh sửa Người dùng</div>
+                <div class="container-fluid admin-header">
+                    <div class="title col-md-6 col-xs-6"><h3>Cập Nhật Thông Tin Nhân Viên</h3></div>
+                </div>
             </div>
-            <div class="panel-body">
+            <div class="container-fluid">
                 @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "updateUserForm" }))
                 {
                     @Html.AntiForgeryToken()
@@ -47,7 +49,7 @@
                                         @Html.ValidationMessageFor(model => model.LastName, null, new { @class = "input-error-box text-danger" })
                                     </div>
                                 </div>
-                           
+
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="ProductName">Email <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
@@ -62,22 +64,20 @@
                                         @Html.TextBoxFor(model => model.PhoneNumber, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                         @Html.ValidationMessageFor(model => model.PhoneNumber, null, new { @class = "input-error-box text-danger" })
                                     </div>
-                                </div> 
-                                
-                                <div class="form-group">                                   
-                                    <label class="col-sm-3 control-label" for="ProductName"><input type="checkbox" id="enableUpdatePassword" /></label>
-                                    <div class="col-sm-7">
-                                        <span class = "form-control">Chỉnh sửa mật khẩu</span>  
-                                    </div>                                 
-                                </div>   
-                                <div class="form-group" id="passwordSection">                                    
+                                </div>
+                                <div class="checkbox col-sm-offset-3" style="margin-bottom:10px;">
+                                    <label>
+                                        <input type="checkbox" id="enableUpdatePassword"> Chỉnh sửa mật khẩu
+                                    </label>
+                                </div>
+                                <div class="form-group" id="passwordSection">
                                     <label class="col-sm-3 control-label" for="ProductName">Mật khẩu<span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
                                         @Html.TextBoxFor(model => model.PasswordInUpdate, new { @class = "form-control" }) <span class="input-error-box text-danger"></span>
                                         @Html.ValidationMessageFor(model => model.PasswordInUpdate, null, new { @class = "input-error-box text-danger" })
                                     </div>
-                                </div>   
-                                                                                  
+                                </div>
+
                             </div>
                             <div class="col-md-4 col-lg-4">
                                 <div class="form-group">
