--- a/170516/Views/Administrator/ViewProductCategory.cshtml
+++ b/170516/Views/Administrator/ViewProductCategory.cshtml
@@ -1,23 +1,25 @@
 ﻿@model _170516.Models.Administrator.ViewProductCategoryModel
 @{
-    ViewBag.Title = "Quản Lý Danh Mục";
+    ViewBag.Title = "Quản lý danh mục sản phẩm";
 }
 
 <div class="row">
     <div class="col-md-12">
-        <div class="content-box-large">
+        <div class="main-content-wrapper">
             <div class="panel-heading">
                 <ol class="breadcrumb">
-                    <li class="active">Quản Lý Danh mục</li>
+                    <li class="active">Quản lý danh mục</li>
                 </ol>
-                <div class="panel-title title-3">Danh Sách Danh Mục</div>
-                <div class="panel-options">
-                    <a id="addBtn" href="@Url.Action("AddProductCategory", "Administrator")" class="btn btn-primary btn-xs" style="margin-top:0px;"><i class="glyphicon glyphicon-plus"></i> Thêm</a>
+                <div class="container-fluid admin-header">
+                    <div class="title col-md-6 col-xs-6"><h3>Danh Sách Danh Mục</h3></div>
+                    <div class="col-md-6 col-xs-6">
+                        <a id="addBtn" href="@Url.Action("AddProductCategory", "Administrator")" class="btn btn-primary btn-sm add-button"><i class="glyphicon glyphicon-plus"></i> Thêm</a>
+                    </div>
                 </div>
             </div>
-            <div class="panel-body">
-             @if (Model.Categories.Any())
-            {
+            <div class="container-fluid">
+                @if (Model.Categories.Any())
+                {
                     <div class="row">
                         <div class="col-sm-6">
                             <input type="hidden" id="dataTables_sort_field_hidden" value="@Model.SortField" />
@@ -70,14 +72,14 @@
                                 {
                                     <input type="search" class="form-control input-sm" value="@Model.SearchText">
                                 }
-                                <button type="button" id="dataTables_searchCategory" class="btn btn-default btn-sm"><i class="fa fa-search"></i></button>
+                                <button type="button" id="dataTables_searchCategory" class="btn btn-info btn-sm"><i class="fa fa-search"></i></button>
                             </div>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-sm-12 dataTable_grid">
-                            <table class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" id="dataTable_category" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
+                            <table class="table table-striped table-hover dataTable no-footer dtr-inline" id="dataTable_category" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
                                 <thead>
                                     <tr role="row">
                                         <th class="center" tabindex="0" rowspan="1" colspan="1">#</th>
@@ -151,10 +153,10 @@
                                         <tr class="gradeA odd" role="row">
                                             <td>@i</td>
                                             <td>@Model.Categories[i - 1].Name</td>
-                                            <td>@Model.Categories[i - 1].Description</td>
+                                            <td style="width:30%;">@Model.Categories[i - 1].Description</td>
                                             <td>@Model.Categories[i - 1].DateModified.ToString("dd/MM/yyyy hh:mm")</td>
                                             <td>@Model.Categories[i - 1].CreatedUserID</td>
-                                            <td>                                                
+                                            <td>
                                                 <a class="action-link detail-link" title="Chi tiết" href="@Url.Action("ViewProductCategoryDetail", "Administrator", new { id = Model.Categories[i - 1].CategoryID })"><i class="fa fa-info-circle"></i></a>
                                                 <a class="action-link update-link" title="Cập nhật" href="@Url.Action("UpdateProductCategory", "Administrator", new { id = Model.Categories[i - 1].CategoryID })"><i class="fa fa-pencil"></i></a>
                                                 <a class="action-link remove-link category" title="Xóa" href="#" data-url="@Url.Action("RemoveProductCategory", "Administrator", new { id = Model.Categories[i - 1].CategoryID })"><i class="fa fa-remove"></i></a>
@@ -166,7 +168,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-6">                            
+                        <div class="col-sm-6">
                             @if (Model.EndIndex > Model.TotalNumber)
                             {
                                 <div class="dataTables_info" role="status" aria-live="polite">Hiển thị từ @Model.StartIndex tới @Model.TotalNumber trong @Model.TotalNumber danh mục</div>
@@ -174,7 +176,7 @@
                             else
                             {
                                 <div class="dataTables_info" role="status" aria-live="polite">Hiển thị từ @Model.StartIndex tới @Model.EndIndex trong @Model.TotalNumber danh mục</div>
-                            }     
+                            }
                         </div>
                         <div class="col-sm-6">
                             <div class="dataTables_paginate">
