--- a/170516/Views/Administrator/ViewRequest.cshtml
+++ b/170516/Views/Administrator/ViewRequest.cshtml
@@ -4,14 +4,16 @@
 }
 <div class="row">
     <div class="col-md-12">
-        <div class="content-box-large">
+        <div class="main-content-wrapper">
             <div class="panel-heading">
                 <ol class="breadcrumb">
-                    <li class="active">Quản Lý Yêu Cầu Khách Hàng</li>
+                    <li class="active">Quản lý yêu cầu khách hàng</li>
                 </ol>
-                <div class="panel-title title-3">Danh Sách Yêu Cầu</div>
+                <div class="container-fluid admin-header">
+                    <div class="title col-md-6 col-xs-6"><h3>Danh sách yêu cầu khách hàng</h3></div>
+                </div>
             </div>
-            <div class="panel-body">
+            <div class="container-fluid">
                 @if (Model.Requests.Any())
                 {
                     <div class="row">
@@ -66,7 +68,7 @@
                                 {
                                     <input type="search" class="form-control input-sm" value="@Model.SearchText">
                                 }
-                                <button type="button" id="dataTables_search" class="btn btn-default btn-sm"><i class="fa fa-search"></i></button>
+                                <button type="button" id="dataTables_search" class="btn btn-info btn-sm"><i class="fa fa-search"></i></button>
                             </div>
                         </div>
                     </div>
