--- a/170516/Views/Administrator/ViewShipperDetails.cshtml
+++ b/170516/Views/Administrator/ViewShipperDetails.cshtml
@@ -1,77 +1,65 @@
 ﻿
 @model _170516.Models.Administrator.CreateShipperModel
 @{
-    ViewBag.Title = "ViewShipperDetails";
+    ViewBag.Title = "Chi tiết đơn vị vận chuyển";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-
 <div class="row">
     <div class="col-md-12">
-        <div class="content-box-large">
+        <div class="main-content-wrapper">
             <div class="panel-heading">
                 @*nav bar*@
                 <ol class="breadcrumb">
-                    <li><a href="@Url.Action("ViewShipper","Administrator")">Quản Lý Shipper</a></li>
-                    <li class="active">Chi tiết Shipper</li>
+                    <li><a href="@Url.Action("ViewShipper","Administrator")">Quản lý đơn vị vận chuyển</a></li>
+                    <li class="active">Chi tiết đơn vị vận chuyển</li>
                 </ol>
-                <div class="panel-title title-3">@Model.CompanyName</div>
+                <div class="container-fluid admin-header">
+                    <div class="title col-md-6 col-xs-6"><h3>@Model.CompanyName</h3></div>
+                </div>
             </div>
-            <div class="panel-body">
+            <div class="container-fluid">
                 <div class="form-horizontal">
                     <div class="row">
-                        <div class="col-md-12 col-lg-12">
+                        <div class="col-md-12 col-lg-12 detail-view">
                             @Html.HiddenFor(model => model.ShipperID)
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="CompanyName">Tên Shipper <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="CompanyName">Tên công ty <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
-                                    <span class="info-box">@Model.CompanyName</span>
-                                </div>
-                            </div>
-
-                            
-
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Address1">Phone <span class="text-danger">*</span></label>
-                                <div class="col-sm-7">
-                                    <span class="info-box">@Model.Phone</span>
+                                    <p class="info-box">@Model.CompanyName</p>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Address2">EmailAddress <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Address1">Điện thoại <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
-                                    <span class="info-box">@Model.EmailAddress</span>
+                                    <p class="info-box">@Model.Phone</p>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="City">Address <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Address2">Địa chỉ Email <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
-                                    <span class="info-box">@Model.Address</span>
+                                    <p class="info-box">@Model.EmailAddress</p>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-sm-3 control-label" for="City">Địa chỉ <span class="text-danger">*</span></label>
+                                <div class="col-sm-7">
+                                    <p class="info-box">@Model.Address</p>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Phone">City <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Phone">Tỉnh/Thành phố <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
-                                    <span class="info-box">@Model.City</span>
+                                    <p class="info-box">@Model.City</p>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Fax">District <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Fax">Quận <span class="text-danger">*</span></label>
                                 <div class="col-sm-7">
-                                    <span class="info-box">@Model.District</span>
-                                </div>
-                            </div>                            
-                        </div>
-                        
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12 col-lg-12">
-                            <div class="form-group">
-                                <div class="col-md-12 form-button">
-                                    <button class="btn btn-primary" type="button" id="btnUpdateShipperLink"><i class="glyphicon glyphicon-floppy-disk"></i> Chỉnh sửa</button>
-                                    <button class="btn btn-danger" type="reset" id="btnDeleteShipper"><i class="glyphicon glyphicon-remove"></i>Xóa</button>
+                                    <p class="info-box">@Model.District</p>
                                 </div>
                             </div>
                         </div>
