--- a/170516/Views/Administrator/ViewUser.cshtml
+++ b/170516/Views/Administrator/ViewUser.cshtml
@@ -1,22 +1,24 @@
 ﻿@model _170516.Models.Administrator.ViewUserModel
 @{
-    ViewBag.Title = "ViewUser";
+    ViewBag.Title = "Quản lý nhân viên";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="row">
     <div class="col-md-12">
-        <div class="content-box-large">
+        <div class="main-content-wrapper">
             <div class="panel-heading">
                 <ol class="breadcrumb">
-                    <li class="active">Quản Lý Người dùng</li>
+                    <li class="active">Quản lý nhân viên</li>
                 </ol>
-                <div class="panel-title title-3">Danh Sách Người dùng</div>
-                <div class="panel-options">
-                    <a id="addBtn" href="@Url.Action("AddUser", "Administrator")" class="btn btn-success btn-xs" style="margin-top:0px;"><i class="fa fa-plus"></i> Thêm người dùng</a>
+                <div class="container-fluid admin-header">
+                    <div class="title col-md-6 col-xs-6"><h3>Danh Sách Nhân Viên</h3></div>
+                    <div class="col-md-6 col-xs-6">
+                        <a id="addBtn" href="@Url.Action("AddUser", "Administrator")" class="btn btn-primary btn-sm add-button"><i class="glyphicon glyphicon-plus"></i> Đăng ký nhân viên</a>
+                    </div>
                 </div>
             </div>
-            <div class="panel-body">
+            <div class="container-fluid">
                 @if (Model.Users.Any())
                 {
                     <div class="row">
@@ -71,13 +73,13 @@
                                 {
                                     <input type="search" class="form-control input-sm" value="@Model.SearchText">
                                 }
-                                <button type="button" id="dataTables_searchUser" class="btn btn-default btn-sm"><i class="fa fa-search"></i></button>
+                                <button type="button" id="dataTables_searchUser" class="btn btn-info btn-sm"><i class="fa fa-search"></i></button>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12 dataTable_grid">
-                            <table class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" id="dataTable_user" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
+                            <table class="table table-striped table-hover dataTable no-footer dtr-inline" id="dataTable_user" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
                                 <thead>
                                     <tr role="row">
                                         <th class="center" tabindex="0" rowspan="1" colspan="1">#</th>
@@ -170,13 +172,13 @@
                                             <td>@Model.Users[i - 1].EmailAddress</td>
                                             @if (@Model.Users[i - 1].IsActive)
                                             {
-                                                <td><span class="btn-success">Hoạt động</span></td>
+                                                <td class="text-center"><span class="text-success">Hoạt động</span></td>
                                             }
                                             else
                                             {
-                                                <td><span class="btn-danger">Không hoạt động</span></td>
+                                                <td class="text-center"><span class="text-danger">Không hoạt động</span></td>
                                             }
-                                           
+
                                             <td>
                                                 @*<a class="action-link detail-link" title="Chi tiết" href="#"><i class="fa fa-info-circle"></i></a>*@
                                                 <a class="action-link update-link" title="Cập nhật" href="@Url.Action("UpdateUser", "Administrator", new { userid = Model.Users[i - 1].AccountID })"><i class="fa fa-pencil"></i></a>
@@ -186,8 +188,8 @@
                                                 }
                                                 else
                                                 {
-                                                    <a class="action-link remove-link user" title="Active" href="#" data-url="@Url.Action("ChangeUserStatus", "Administrator", new { guid = Model.Users[i - 1].AccountID })"><i class="fa fa-check-square"></i></a>
-                                                }                                                
+                                                    <a class="action-link remove-link user" title="Active" href="#" data-url="@Url.Action("ChangeUserStatus", "Administrator", new { guid = Model.Users[i - 1].AccountID })"><i class="fa fa-check"></i></a>
+                                                }
                                             </td>
                                         </tr>
                                     }
@@ -205,7 +207,7 @@
                             else
                             {
                                 <div class="dataTables_info" role="status" aria-live="polite">Hiển thị từ @Model.StartIndex tới @Model.EndIndex trong @Model.TotalNumber người dùng</div>
-                            }                            
+                            }
                         </div>
                         <div class="col-sm-6">
                             <div class="dataTables_paginate">
